K3S/tools/librespeed/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: librespeed
  name: librespeed
  namespace: librespeed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: librespeed
  template:
    metadata:
      labels:
        app: librespeed
    spec:
      containers:
        - name: librespeed
          image: ghcr.io/librespeed/speedtest:5.3.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
