K3S/tools/librespeed/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: librespeed
  name: librespeed-svc
  namespace: librespeed
spec:
  type: ClusterIP
  selector:
    app: librespeed
  ports:
    - port: 80
